# fujin

./: CHANGELOG.md  CLAUDE.md  INTEGRATION_TEST_OPTIMIZATION.md  PLAN_FILE_BASED_FUJIN.md  justfile  pyproject.toml  test_report.md  todos.md
.github/workflows/: publish.yml
docs/: configuration.rst  troubleshooting.rst
docs/commands/: app.rst  audit.rst  deploy.rst  down.rst  exec.rst  index.rst  init.rst  migrate.rst  new.rst  prune.rst  rollback.rst  scale.rst  server.rst  show.rst
docs/guides/: django-complete.rst  templates.rst
docs/howtos/: binary.rst  index.rst  multiple-upstreams.rst
examples/: django-wsgi-asgi-example.toml
examples/django/bookstore/: fujin.toml  fujin.toml.backup  pyproject.toml  web.service
examples/django/bookstore/.fujin/: Caddyfile
examples/django/bookstore/.fujin/systemd/: health.service  web.service  web.socket  worker@.service
examples/django/bookstore/.fujin/systemd/common.d/: base.conf
examples/django/bookstore/bookstore/: settings.py
plugins/fujin-secrets-1password/: pyproject.toml
plugins/fujin-secrets-bitwarden/: README.md  pyproject.toml
plugins/fujin-secrets-doppler/: pyproject.toml
plugins/fujin-secrets-env/: README.md  (+1 more)
scripts/: generate-help-screenshots.sh  migrate-to-releases.sh
tests/: conftest.py  test_app.py  test_audit.py  test_caddy_domain.py  test_config.py  test_connection.py  test_deploy.py  test_discovery.py  test_down.py  test_init.py  test_installer.py  test_migrate.py  test_new.py  test_prune.py  test_rollback.py  test_scale.py  test_server.py  test_shellcheck.py  test_show.py
(+45 files in other folders)
