[project]
name = "bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django>=5.1.2", "django-tasks>=0.5", "gunicorn>=23.0.0"]

[project.scripts]
bookstore = "bookstore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-subprocess>=1.5.3",
    "shellcheck-py>=0.11.0.1",
]
